# kdevzealdoc

./: .clang-format  CMakeLists.txt  README.md
src/: CMakeLists.txt  Messages.sh  debug.cpp  debug.h  kdevzealdoc.cpp  kdevzealdoc.h  kdevzealdoc.json  macros.hpp  util.cpp  util.h  zealdocconfigpage.cpp  zealdocconfigpage.h  zealdocconfigpage.ui  zealdocplugin.cpp  zealdocplugin.h  zealdocprovider.cpp  zealdocprovider.h  zealdocumentation.cpp  zealdocumentation.h
src/zeal/registry/: cancellationtoken.cpp  cancellationtoken.h  docset.cpp  docset.h  searchresult.h
src/zeal/util/: plist.cpp  plist.h  sqlitedatabase.cpp  sqlitedatabase.h
